News UAT/force-app/main/default/objects/Rule__c/Rule__c.object-meta.xml
<CustomObject>
    <label>Rule</label>
    <nameField>
        <displayFormat>Rule-{000000}</displayFormat>
        <label>Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>