News UAT/force-app/main/default/objects/Rule__c/fields/Answer_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Answer_Picklist_Values__c</fullName>
    <description>Serialised string representing the values to use when populating the Answer picklist</description>
    <label>Answer Picklist Values</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>