News UAT/force-app/main/default/objects/Rule__c/fields/Answer_Source__c.field-meta.xml
<CustomField>
    <fullName>Answer_Source__c</fullName>
    <label>Collect Answer By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
                <label>Asking a Question</label>
            </value>
            <value>
                <fullName>Related Record</fullName>
                <label>Copying Data from a Related Record</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>