News UAT/force-app/main/default/objects/Rule__c/fields/Enable_Field_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Field_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Answer will not be able to be overwritten; instead, new Answer text will be appended to the existing text, and all text will be marked with the User&#39;s name and timestamped</description>
    <label>Enable Field Tracking</label>
    <type>Checkbox</type>
</CustomField>