News UAT/force-app/main/default/objects/Rule__c/fields/Field_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Field_Name_1__c</fullName>
    <label>Field Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>