News UAT/force-app/main/default/objects/Rule__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>This picklist defines the fields that can be used in a Data Filter
Please be aware that any changes to the values in this list will require code changes in the CS_Questionnaire_Controller class</description>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product_Type_Name__c</fullName>
                <label>Product Type</label>
            </value>
            <value>
                <fullName>StageName</fullName>
            </value>
            <value>
                <fullName>csmso__Status__c</fullName>
                <label>Status</label>
            </value>
            <value>
                <fullName>Customer_Tier__c</fullName>
                <label>Customer Tier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>