News UAT/force-app/main/default/objects/Rule__c/fields/Field_Value_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text_2__c</fullName>
    <label>Field Value 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>