News UAT/force-app/main/default/objects/Rule__c/fields/Field_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Text__c</fullName>
    <label>Field Value (text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>