News UAT/force-app/main/default/objects/Rule__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>