News UAT/force-app/main/default/objects/Rule__c/fields/Input_Output__c.field-meta.xml
<CustomField>
    <fullName>Input_Output__c</fullName>
    <label>Input / Output</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input</fullName>
            </value>
            <value>
                <fullName>Output</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>