News UAT/force-app/main/default/objects/Rule__c/fields/isMandatory__c.field-meta.xml
<CustomField>
    <fullName>isMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>