News UAT/force-app/main/default/objects/Rule__c/fields/Object_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_1__c</fullName>
    <label>Object Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>