News UAT/force-app/main/default/objects/Rule__c/fields/Object_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Object_Name_2__c</fullName>
    <label>Object Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>