News UAT/force-app/main/default/objects/Rule__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>This picklist defines the objects that can be used in a Data Filter
Please be aware that any changes to the values in this list will require code changes in the CS_Questionnaire_Controller class</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cscfga__Product_Configuration__c</fullName>
                <label>Product Configuration</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>csmso__Sales_Order__c</fullName>
                <label>Sales Order</label>
            </value>
            <value>
                <fullName>Product_Order__c</fullName>
                <label>Product Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>