News UAT/force-app/main/default/objects/Rule__c/fields/Parameter_Label__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Label__c</fullName>
    <label>Parameter Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>