News UAT/force-app/main/default/objects/Rule__c/fields/Question2__c.field-meta.xml
<CustomField>
    <fullName>Question2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question2</label>
    <referenceTo>Question2__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Question_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>