News UAT/force-app/main/default/objects/Rule__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Universal</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
                <isActive>false</isActive>
                <label>Specific</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>