News UAT/force-app/main/default/objects/Rule__c/fields/Questionnaire_Action__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire Action</label>
    <referenceTo>Questionnaire_Action__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>