News UAT/force-app/main/default/objects/Rule__c/fields/Related_Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_Label__c</fullName>
    <label>Related Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>