News UAT/force-app/main/default/objects/Rule__c/fields/Related_Field_name__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_name__c</fullName>
    <label>Related Field name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Related_Object_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account.BillingPostalCode</fullName>
                <label>Billing Postcode</label>
            </value>
            <value>
                <fullName>Account.BillingState</fullName>
                <label>Billing State</label>
            </value>
            <value>
                <fullName>Account.BillingStreet</fullName>
                <label>Billing Street</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.Phone</fullName>
                <label>Campaign Contact&#39;s Business Phone Number</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.Email</fullName>
                <label>Campaign Contact&#39;s Email</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.LastName</fullName>
                <label>Campaign Contact&#39;s Family Name</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.FirstName</fullName>
                <label>Campaign Contact&#39;s Given Name</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.MobilePhone</fullName>
                <label>Campaign Contact&#39;s Mobile Phone Number</label>
            </value>
            <value>
                <fullName>Campaign_Customer_Contact__r.Salutation</fullName>
                <label>Campaign Contact&#39;s Salutation</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.Email</fullName>
                <label>Campaign Manager&#39;s Email</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.FirstName</fullName>
                <label>Campaign Manager&#39;s First Name</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.Name</fullName>
                <label>Campaign Manager&#39;s Full Name</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.LastName</fullName>
                <label>Campaign Manager&#39;s Last Name</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.Phone</fullName>
                <label>Campaign Manager&#39;s Phone Number</label>
            </value>
            <value>
                <fullName>Assigned_Campaign_Manager__r.State</fullName>
                <label>Campaign Manager&#39;s State</label>
            </value>
            <value>
                <fullName>Account.Name</fullName>
                <label>Client&#39;s Company Name</label>
            </value>
            <value>
                <fullName>Account.Website</fullName>
                <label>Client&#39;s Company Website</label>
            </value>
            <value>
                <fullName>Account.Industry</fullName>
                <label>Client&#39;s Industry</label>
            </value>
            <value>
                <fullName>Account__c</fullName>
                <label>Company ID</label>
            </value>
            <value>
                <fullName>Sales_Order__c</fullName>
                <label>Order ID</label>
            </value>
            <value>
                <fullName>Owner.Email</fullName>
                <label>Sales Rep&#39;s Email</label>
            </value>
            <value>
                <fullName>Owner.Name</fullName>
                <label>Sales Rep&#39;s Name</label>
            </value>
            <value>
                <fullName>Owner.Phone</fullName>
                <label>Sales Rep&#39;s Phone Number</label>
            </value>
            <value>
                <fullName>Account.BillingCity</fullName>
                <label>Billing City</label>
            </value>
            <value>
                <fullName>Account.Phone</fullName>
                <label>Advertiser Phone</label>
            </value>
            <value>
                <fullName>Account.Fax</fullName>
                <label>Advertiser Fax</label>
            </value>
            <value>
                <fullName>Contact__r.Name</fullName>
                <label>Sales Contact Name</label>
            </value>
            <value>
                <fullName>Contact__r.Email</fullName>
                <label>Sales Contact Email</label>
            </value>
            <value>
                <fullName>Contact__r.Phone</fullName>
                <label>Sales Contact Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>