News UAT/force-app/main/default/objects/Rule__c/fields/Related_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Label__c</fullName>
    <label>Related Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>