News UAT/force-app/main/default/objects/Rule__c/fields/Related_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Name__c</fullName>
    <label>Related Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order__c</fullName>
                <label>Campaign Order</label>
            </value>
            <value>
                <fullName>Product_Order__c</fullName>
                <label>Product Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>