News UAT/force-app/main/default/objects/Rule__c/fields/Related_Record_Section__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Section__c</fullName>
    <description>Needed when the Answer source is a Related Record, not a Question.
These records are not linked to a Question record, where the Section value is stored</description>
    <label>Related Record Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>