News UAT/force-app/main/default/objects/Rule__c/fields/Service_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Class_Name__c</fullName>
    <label>Service Class Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS_GeoNames_Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>