News UAT/force-app/main/default/objects/Rule__c/fields/WhatId2__c.field-meta.xml
<CustomField>
    <fullName>WhatId2__c</fullName>
    <label>WhatId2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>