News UAT/force-app/main/default/objects/Rule__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <externalId>true</externalId>
    <label>WhatId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>