News UAT/force-app/main/default/objects/Rule__c/fields/When_to_Ask__c.field-meta.xml
<CustomField>
    <fullName>When_to_Ask__c</fullName>
    <label>When to Ask</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Order__c</fullName>
                <label>Campaign Order</label>
            </value>
            <value>
                <fullName>Product_Order__c</fullName>
                <label>Product Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>